# rocq-sims

./: CTree.v  ChangeLog.md  DivSim.v  Divergence.v  FreeSim.v  IndSim.v  IndSimCounterExample.v  LTS.v  LTSSum.v  OptSim.v  README.md  Sims.v  Trace.v  Utils.v  _CoqProject  coq-sims-examples.opam  coq-sims.opam  dune  dune-project  rocq-sims-examples.opam  rocq-sims.opam
examples/: dune
theories/: CTree.v  Determinism.v  DivSim.v  Divergence.v  FreeSim.v  IndSim.v  IndSimCounterExample.v  LTS.v  LTSSum.v  SimExample.v  Sims.v  UB.v  Utils.v  dune
